Make indent (tab/space) better configurable
Using configuration:
  - `magik.formatting.indentChar`
  - `magik.formatting.indentWidth`
  - `magik.formatting.insertFinalNewline`
  - `magik.formatting.trimTrailingWhitespace`
  - `magik.formatting.trimFinalNewlines`